--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,30 @@
-body {
+*{
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  font-family: 'Inter';
+  width: 100%;
+}
+
+button {
+  font-family: 'Inter';
+}
+
+h2 {
+  font-size: 3em;
+}
+
+input {
+  font-family: 'Inter';
+}
+
+option {
+  font-family: 'Inter';
+}
+
+select {
+  font-family: 'Inter';
 }
